--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,186 +11,13 @@
 
 	<body th:style="'background: url(images/background.jpg) no-repeat center center fixed;background-size: cover;'">
 	<!--   NAVBAR -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">Travel<span class="text-primary">Agency</span></a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<!-- PERMBAJTJA E NAVBARIT       -->
-		<div class="collapse navbar-collapse">
-			<div class="navbar-nav">
-				<a class="nav-item nav-link active" href="#">Paketat <span class="sr-only">(current)</span></a>
-				<a class="nav-item nav-link" href="#">Ofertat E Fundit</a>
-
-			</div>
-		</div>
-
-		<!-- NQS USER ESHTE ANONIM -->
-		<div sec:authorize="hasRole('ROLE_ANONYMOUS')">
-			<div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="btn btn-primary m-1" data-toggle="modal" data-target="#myRegisterModal" href="/register">Regjistrohu</a>
-					</li>
-					<li class="nav-item">
-						<a class="btn btn-primary m-1" data-toggle="modal" data-target="#myLoginModal" href="/login">Logohu</a>
-					</li>
-				</ul>
-			</div>
-
-		</div>
-
-		<!-- NE TE KUNDERT -->
-		<div sec:authorize="hasRole('ROLE_USER')">
-			<div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link"  th:href="@{#}"></a>
-					</li>
-
-					<li>
-						<a class="nav-link" th:text="'Pershendetje '+ ${#request.userPrincipal.principal.getName}" th:href="@{#}"></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Paketat e Mija</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/logout">Dilni</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-
-		<!--   NQS USER ESTE ADMIN                 -->
-		<div sec:authorize="hasRole('ROLE_ADMIN')">
-
-			<div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link"  th:href="@{#}"></a>
-					</li>
-
-					<li>
-						<a class="nav-link" th:text="'Pershendetje '+ ${#request.userPrincipal.principal.getName}" th:href="@{#}"></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Paketat e Mija</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/logout">Dilni</a>
-					</li>
-
-					<li class="nav-item">
-						<a class="nav-link" href="/admin/home">Funksionet Admin</a>
-					</li>
-				</ul>
-			</div>
-
-		</div>
-
-		<!--  DIALOGU MODAL LOGIN-->
-		<div class="modal" id="myLoginModal">
-			<div class="modal-dialog">
-				<div class="modal-content">
-
-					<!-- Modal Header -->
-					<div class="modal-header">
-						<h4 class="modal-title">Ju Lutem Vendosni Te Dhenat</h4>
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
-					</div>
-
-					<!-- Modal body -->
-					<div class="modal-body">
-						<form th:action="@{/login}" style="max-width: 600px; margin: 0 auto;" id="modal-login" method="post">
-
-							<div class="m-3">
-								<div class="form-group row">
-									<label class="col-form-label col-sm-4"> Emri Juaj :</label>
-									<div class="col-sm-8">
-										<input type="text" th:name="name" class="form-control" required>
-									</div>
-								</div>
-								<div class="form-group row">
-									<label class="col-form-label col-sm-4"> Passwordi Juaj :</label>
-									<div class="col-sm-8">
-										<input type="password" th:name="password" class="form-control" required>
-									</div>
-								</div>
-							</div>
-						</form>
-					</div>
-
-					<!-- Modal footer -->
-					<div class="modal-footer">
-						<div class="text-center p-3">
-							<button type="submit" class="btn btn-primary" form="modal-login"> Logohu</button>
-						</div>
-						<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-					</div>
-
-				</div>
-			</div>
-		</div>
-
-		<!--  DIALOGU MODAL REGISTER -->
-		<div class="modal" id="myRegisterModal">
-			<div class="modal-dialog">
-				<div class="modal-content">
-
-					<!-- Modal Header -->
-					<div class="modal-header">
-						<h4 class="modal-title">Regjistrohu</h4>
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
-					</div>
-
-					<!-- Modal body -->
-					<div class="modal-body">
-						<form th:action="@{/process_register}" style="max-width: 600px; margin: 0 auto;" id="modal-register" method="post">
-
-							<div class="m-3">
-								<div class="form-group row">
-									<label class="col-form-label col-sm-4"> Emri Juaj :</label>
-									<div class="col-sm-8">
-										<input type="text" th:name="name" class="form-control" required>
-									</div>
-								</div>
-
-								<div class="form-group row">
-									<label class="col-form-label col-sm-4"> Passwordi Juaj :</label>
-									<div class="col-sm-8">
-										<input type="password" th:name="password" class="form-control" required>
-									</div>
-								</div>
-
-
-							</div>
-
-						</form>
-					</div>
-
-					<!-- Modal footer -->
-					<div class="modal-footer">
-						<div class="text-center p-3">
-							<button type="submit" class="btn btn-primary" form="modal-register"> Regjistrohu</button>
-						</div>
-						<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-					</div>
-
-				</div>
-			</div>
-		</div>
-
-	</nav>
+	<nav th:replace="common :: main_navbar"></nav>
 
 	<div class="h-4 text-center">
 		<h2 th:text="${message}"></h2>
 	</div>
 
-
-
-
-	<!--    carousel-->
+	<!--CAROUSEL-->
 
 
 
