--- a/src/main/resources/templates/add_country_form.html
+++ b/src/main/resources/templates/add_country_form.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <meta charset="UTF-8">
-    <title>Edit User</title>
+    <title>Shto Shtet</title>
 </head>
 
 
@@ -26,7 +26,7 @@
                     <h1 class="text-center">Shto Shtet</h1>
 
                     <form th:action="@{/admin/country/save}" th:object="${country}" method="post">
-
+                        <input type="hidden" th:field="*{id}">
                         <!--NAME INPUT-->
                         <div class="form-group">
                             <label for="cName">Emri</label>
