--- a/src/main/resources/templates/add_packet_form.html
+++ b/src/main/resources/templates/add_packet_form.html
@@ -25,7 +25,7 @@
                 <div class="card-body d-flex flex-column align-items-center">
                     <h1 class="text-center">[[${message}]]</h1>
                     <form th:action="@{/admin/packet/save}" th:object="${packet}" method="post">
-
+                        <input type="hidden" th:field="*{id}">
                         <!--NAME INPUT-->
                         <div class="form-group">
                             <label  for="nrOfDays">Nr i diteve</label>
@@ -35,7 +35,7 @@
                         <div class="form-group">
                             <label for="cityselect" >Qyteti</label>
                             <select id="cityselect" th:field="*{city}" class="form-control" required>
-                                <th:block th:each="cit : ${cityList}">
+                                <th:block th:each="cit : ${allCityList}">
                                     <option th:text="${cit.name}" th:value="${cit.id}"></option>
                                 </th:block>
                             </select>
