--- a/src/main/resources/templates/admin_page.html
+++ b/src/main/resources/templates/admin_page.html
@@ -10,110 +10,97 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <meta charset="UTF-8">
+
     <title>Admin Functions</title>
-
-
 
 </head>
 <body th:style="'background: url(/images/admin_background.jpg) no-repeat center center fixed;background-size: cover;'">
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Travel<span class="text-primary">Agency</span></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <!--NAVBAR-->
+    <nav th:replace="common :: inside_admin_navbar"></nav>
 
-    <!-- PERMBAJTJA E NAVBARIT       -->
-    <div class="collapse navbar-collapse">
-        <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="/">Mbyll<span class="sr-only">(current)</span></a>
+    <div class="container ">
+
+        <div class="row pt-5 w-100 mx-auto">
+
+            <!-- Packets Card  -->
+            <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
+                <div class="card p-4">
+                    <div class="row">
+                        <div class="col-6">
+                            <img class="card-img-top img-fluid w-lg-75 w-md-50 w-100 text-center" src="/images/admin_background.jpg" alt="Card image cap"/>
+                        </div>
+                        <div class="col-12">
+                            <div class="card-body px-0 pb-0">
+                                <h5 class="card-title">Paketat</h5>
+                                <p class="card-text">Administro Paketat</p>
+                                <a href="/admin/packet/register" class="btn btn-primary">Shto Pakete</a>
+                                <a href="/admin/packet/all" class="btn btn-primary">Shiko Paketat</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Clients Card  -->
+            <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
+                <div class="card p-4">
+                    <div class="row">
+                        <div class="col-6">
+                            <img class="card-img-top img-fluid w-lg-75 w-md-50 w-100 text-center" src="/images/clients.jpg" alt="Card image cap"/>
+                        </div>
+                        <div class="col-12">
+                            <div class="card-body px-0 pb-0">
+                                <h5 class="card-title">Klientet</h5>
+                                <p class="card-text">Administrimi Klienteve</p>
+                                <a href="/admin/users/all" class="btn btn-primary">Shiko Klientat</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Cities Card  -->
+            <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
+                <div class="card p-4">
+                    <div class="row">
+                        <div class="col-6">
+                            <img class="card-img-top img-fluid w-lg-75 w-md-50 w-100 text-center" src="/images/paris.jpg" alt="Card image cap"/>
+                        </div>
+                        <div class="col-12">
+                            <div class="card-body px-0 pb-0">
+                                <h5 class="card-title">Qytetet</h5>
+                                <p class="card-text">Adminstro Qytetet</p>
+                                <a href="/admin/city/register" class="btn btn-primary">Shto Qytet</a>
+                                <a href="/admin/cities/all" class="btn btn-primary">Qytetet Ekzistuese</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Countries Card  -->
+            <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
+                <div class="card p-4">
+                    <div class="row">
+                        <div class="col-6">
+                            <img class="card-img-top img-fluid w-lg-75 w-md-50 w-100 text-center" src="/images/countries.jpg" alt="Card image cap"/>
+                        </div>
+                        <div class="col-12">
+                            <div class="card-body px-0 pb-0">
+                                <h5 class="card-title">Shtetet</h5>
+                                <p class="card-text">Adminstro Shtetet</p>
+                                <a href="/admin/country/register" class="btn btn-primary">Shto Shtet</a>
+                                <a href="/admin/country/all" class="btn btn-primary">Shtetet Ekzistuese</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
-
-</nav>
-<div class="container ">
-
-    <div class="row pt-5 w-100 mx-auto">
-
-        <!-- Packets Card  -->
-        <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
-            <div class="card p-4">
-                <div class="row">
-                    <div class="col-6">
-                        <img class="card-img-top img-fluid w-lg-75 w-md-50 w-100 text-center" src="/images/admin_background.jpg" alt="Card image cap"/>
-                    </div>
-                    <div class="col-12">
-                        <div class="card-body px-0 pb-0">
-                            <h5 class="card-title">Paketat</h5>
-                            <p class="card-text">Administro Paketat</p>
-                            <a href="/admin/packet/register" class="btn btn-primary">Shto Pakete</a>
-                            <a href="/admin/packet/all" class="btn btn-primary">Shiko Paketat</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- Clients Card  -->
-        <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
-            <div class="card p-4">
-                <div class="row">
-                    <div class="col-6">
-                        <img class="card-img-top img-fluid w-lg-75 w-md-50 w-100 text-center" src="/images/clients.jpg" alt="Card image cap"/>
-                    </div>
-                    <div class="col-12">
-                        <div class="card-body px-0 pb-0">
-                            <h5 class="card-title">Klientet</h5>
-                            <p class="card-text">Administrimi Klienteve</p>
-                            <a href="/admin/users/all" class="btn btn-primary">Shiko Klientat</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- Cities Card  -->
-        <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
-            <div class="card p-4">
-                <div class="row">
-                    <div class="col-6">
-                        <img class="card-img-top img-fluid w-lg-75 w-md-50 w-100 text-center" src="/images/paris.jpg" alt="Card image cap"/>
-                    </div>
-                    <div class="col-12">
-                        <div class="card-body px-0 pb-0">
-                            <h5 class="card-title">Qytetet</h5>
-                            <p class="card-text">Adminstro Qytetet</p>
-                            <a href="/admin/city/register" class="btn btn-primary">Shto Qytet</a>
-                            <a href="/admin/cities/all" class="btn btn-primary">Qytetet Ekzistuese</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Countries Card  -->
-        <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
-            <div class="card p-4">
-                <div class="row">
-                    <div class="col-6">
-                        <img class="card-img-top img-fluid w-lg-75 w-md-50 w-100 text-center" src="/images/countries.jpg" alt="Card image cap"/>
-                    </div>
-                    <div class="col-12">
-                        <div class="card-body px-0 pb-0">
-                            <h5 class="card-title">Shtetet</h5>
-                            <p class="card-text">Adminstro Shtetet</p>
-                            <a href="/admin/country/register" class="btn btn-primary">Shto Shtet</a>
-                            <a href="/admin/country/all" class="btn btn-primary">Shtetet Ekzistuese</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
 
 
 </body>
