--- a/src/main/resources/templates/all_countries.html
+++ b/src/main/resources/templates/all_countries.html
@@ -6,9 +6,9 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Gjithe Qytetet</title>
+    <title>Gjithe Shtetet</title>
 </head>
-<body th:style="'background: url(/images/paris.jpg) no-repeat center center fixed;background-size: cover;'">
+<body th:style="'background: url(/images/countries.jpg) no-repeat center center fixed;background-size: cover;'">
 <div class="container text-center">
 
     <div>
@@ -31,7 +31,8 @@
                 <td th:text="${country.name}"></td>
                 <td th:text="${country.continent.name}"></td>
                 <td>
-                    <a class="h4 mr-3" th:href="@{'/admin/country/edit/' + ${country.id}}">Edito Shtetin</a>
+                    <a class="btn btn-primary mr-3" th:href="@{'/admin/country/edit/' + ${country.id}}">Edito Shtetin</a>
+                    <a class="btn btn-danger mr-3" th:href="@{'/admin/country/delete/' + ${country.id}}">Fshij Shtetin</a>
                 </td>
             </tr>
         </th:block>
