--- a/src/main/resources/templates/all_packets.html
+++ b/src/main/resources/templates/all_packets.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -9,8 +9,10 @@
     <title>Gjithe Paketat</title>
 </head>
 <body th:style="'background: url(/images/admin_background.jpg) no-repeat center center fixed;background-size: cover;'">
-<div class="container text-center">
 
+<nav th:replace="common :: main_navbar">
+</nav>
+<div class="container text-center">
     <div>
         <h1>Paketat</h1>
     </div>
@@ -24,35 +26,52 @@
             <th>Heret e Prenotuara </th>
             <th>Eshte Oferte</th>
             <th>Eshte e Vlefshme</th>
-            <th>Klientat qe kane prenotuar</th>
+            <th sec:authorize="hasRole('ROLE_ADMIN')">Klientat qe kane prenotuar</th>
             <th>Opsionet</th>
+            <th sec:authorize="hasRole('ROLE_ADMIN')">Admin</th>
 
         </tr>
         </thead>
 
         <tbody>
-        <th:block th:each="packet : ${packetList}">
-            <tr>
-                <td th:text="${packet.nrOfDays}"></td>
-                <td th:text="${packet.city.name}"></td>
-                <td th:text="${packet.maxNrOfUsers}"></td>
-                <td th:text="${packet.nrOfTimesBooked}"></td>
-                <td th:text="${packet.isOffer}"></td>
-                <td th:text="${packet.isValid}"></td>
-                <td >
-            <tr th:each="user: ${packet.userList}">
-                <td th:text="${user.name}">id</td>
-            </tr>
-            <td>
-                <a class="h4 mr-3" th:href="@{'/admin/packet/edit/' + ${packet.id}}">Ndrysho </a>
-            </td>
-        </th:block>
+            <th:block th:each="packet : ${packetList}">
+                <tr>
+                    <td th:text="${packet.nrOfDays}"></td>
+                    <td th:text="${packet.city.name}">
+                    <td th:text="${packet.maxNrOfUsers}"></td>
+                    <td th:text="${packet.nrOfTimesBooked}"></td>
+                    <td th:text="${packet.isOffer}"></td>
+                    <td th:text="${packet.isValid}"></td>
+                    <td sec:authorize="hasRole('ROLE_ADMIN')" >
+                        <table>
+                            <tr th:each="user: ${packet.userList}">
+                                <td th:text="${user.name}">id</td>
+
+                            </tr>
+                        </table>
+                    </td>
+
+                    <td sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a class="h4 mr-3" th:href="@{'/transaction/buy/packet/' + ${packet.id}}">Prenoto</a>
+                    </td>
+                    <td sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a class="btn btn-secondary mr-3" th:href="@{'/admin/packet/edit/' + ${packet.id}}">Ndrysho</a>
+                    </td>
+                    <td sec:authorize="hasRole('ROLE_USER')">
+                        <a class="h4 mr-3" th:href="@{'/transaction/buy/packet/' + ${packet.id}}">Prenoto</a>
+                    </td>
+                    <td sec:authorize="hasRole('ROLE_ANONYMOUS')">
+                        <a class="h4 mr-3" th:href="@{#}">SHIKO ME SHUME </a>
+                    </td>
+                </tr>
+
+            </th:block>
         </tbody>
     </table>
 </div>
 
 <div class="text-center">
-    <a class="btn btn-secondary" th:href="@{/admin/home}">kthehu ne Fillim</a>
+<!--    <a class="btn btn-secondary" th:href="@{/admin/home}">kthehu ne Fillim</a>-->
 </div>
 </body>
 </html>
