--- a/src/main/resources/templates/user_form.html
+++ b/src/main/resources/templates/user_form.html
@@ -34,9 +34,9 @@
 			<div class="form-group row">
 				<label class="col-4 col-form-label">Roles: </label>
 				<div class="col-8">
-					<select th:field="*{roles}" class="form-control" required>
-						<th:block th:each="role: ${listRoles}">
-							<option th:field="*{roles}" th:text="${role.name}" th:value="${role.id}" class="m-2" />
+					<select th:field="*{role}" class="form-control" required>
+						<th:block th:each="roles: ${listRoles}">
+							<option th:field="*{role}" th:text="${role.name}" th:value="${role.id}" class="m-2" />
 						</th:block>
 					</select>
 				</div>
