--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -34,6 +34,7 @@
                 <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link active" href="/packets/all">Paketat <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="/packets/offer">Ofertat </a>
+                <a class="nav-item nav-link" href="/transaction/image/form">TestImage</a>
 
             </div>
         </div>
