--- a/src/main/resources/templates/add_city_form.html
+++ b/src/main/resources/templates/add_city_form.html
@@ -26,9 +26,7 @@
             <div class="card shadow border">
                 <div class="card-body d-flex flex-column align-items-center">
                     <h1 class="text-center">[[${pageTitle}]]</h1>
-
-                    <form th:action="@{/admin/city/save}" th:object="${city}" method="post">
-
+                    <form th:action="@{/admin/city/save}" th:object="${city}" method="post" enctype="multipart/form-data">
                         <input type="hidden" th:field="*{id}">
                         <!--VENDOS EMRIN E QYTETIT-->
                         <div class="form-group row">
@@ -37,6 +35,12 @@
                                 <input type="text" th:field="*{name}" class="form-control" required>
                             </div>
                         </div>
+
+                        <div class="form-group">
+                            <label class="col-form-label col-sm-4 font-weight-bold display-3">Fotoja e Qytetit:</label>
+                            <input type="file" name ="imageFile" class="form-control-file">
+                        </div>
+
 
                         <!--VENDOS SHTETIN-->
                         <div class="form-group row">
@@ -64,50 +68,6 @@
     </div>
 </div>
 
-<!--  DIALOGU MODAL edito qyetetin-->
-<div class="modal" id="myAddCountryModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
 
-            <!-- Modal Header -->
-            <div class="modal-header">
-                <h4 class="modal-title">Ju Lutem Vendosni Shtetin Edhe Kontinentin Perkates</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
 
-            <!-- Modal body -->
-            <div class="modal-body">
-                <form  th:action="@{/country/save}" th:object="${country}" style="max-width: 600px; margin: 0 auto;" id="modal-add-country">
-                    <div class="m-3">
-                        <div class="form-group row">
-                            <label class="col-form-label col-sm-4"> Emri i Shtetit :</label>
-                            <div class="col-sm-8">
-                                <input type="text" th:field="*{name}" class="form-control" required>
-                            </div>
-                        </div>
-
-                        <div class="form-group row">
-                            <label class="col-form-label col-sm-8"> Zgjidh Kontinentin Perkates :</label>
-                            <select th:field="${continent}" id="continents">
-                                <th:block th:each="cont : ${continentList}">
-                                    <option th:text="${cont.name}" th:value="${cont.id}"/>
-                                </th:block>
-                            </select>
-                        </div>
-                    </div>
-                </form>
-            </div>
-
-            <!-- Modal footer -->
-            <div class="modal-footer">
-                <div class="text-center p-3">
-                    <button type="submit" class="btn btn-primary" form="modal-add-country"> Ruaj</button>
-                </div>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Mbyll</button>
-            </div>
-
-        </div>
-    </div>
-</div>
 </body>
-</html>ml>
