--- a/src/main/resources/templates/all_cities.html
+++ b/src/main/resources/templates/all_cities.html
@@ -19,6 +19,7 @@
         <tr>
 
             <th>Emri Qytetit</th>
+            <th>Foto</th>
             <th>Shteti Perkates</th>
             <th>Opsionet</th>
 
@@ -29,10 +30,14 @@
         <th:block th:each="city : ${cityList}">
             <tr>
                 <td th:text="${city.name}"></td>
+                <td><img th:src="*{'data:image/jpeg;base64,'+{city.image}}" style="width: 100px;height: 100px;"/></td>
                 <td th:text="${city.country.name}"></td>
                 <td>
                     <a class="h4 mr-3" th:href="@{'/admin/city/edit/' + ${city.id}}">Edito Qytetin</a>
+                    <a class="btn btn-danger mr-3" th:href="@{'/admin/city/delete/' + ${city.id}}">Fshij Qytetin</a>
                 </td>
+
+
             </tr>
         </th:block>
         </tbody>
