added filtered results

--- a/src/main/resources/templates/add_country_form.html
+++ b/src/main/resources/templates/add_country_form.html
@@ -41,9 +41,9 @@
                             </select>
                         </div>
 
-                        <!--                            BUTONI-->
+                        <!--BUTONI-->
                         <div class="text-center p-3">
-                            <button type="submit" class="btn btn-primary"> Ruaj Qytetin</button>
+                            <button type="submit" class="btn btn-primary"> Ruaj Shtetin</button>
                             <a href="/admin/home" class="btn btn-secondary"> Mbyll</a>
                         </div>
                     </form>
