--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -25,13 +25,11 @@
 			<div class="form-group row">
 				<label class="col-4 col-form-label">Password: </label>
 				<div class="col-8">
-					<input type="password" th:field="*{password}" class="form-control" 
-							required minlength="5" maxlength="10"/>
+					<input type="password" th:field="*{password}" class="form-control" required minlength="5" maxlength="10"/>
 				</div>
 			</div>
 			
 
-			
 			<div>
 				<button type="submit" class="btn btn-primary">Sign Up</button> 
 			</div>
