--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,31 +9,40 @@
 </head>
 
 
-	<body th:style="'background: url(images/background_1.jpg) no-repeat center center fixed;background-size: cover;'">
+<body >
+
+<div><!--main div-->
+
+
+
+
 	<!--   NAVBAR -->
 	<nav th:replace="common :: main_navbar"></nav>
 
-<!--	MESSAGE FROM BACKEND-->
+	<!--MESSAGE FROM BACKEND-->
 	<div class="h-4 text-center">
 		<h2 th:text="${message}"></h2>
 	</div>
 
 	<!--SEARCH BAR-->
-	<div class="container">
 
-		<div th:replace="common :: search_bar" >
+	<div th:replace="common :: search_bar" ></div>
 
-		</div>
+
+
+
+	<!--CAROUSEL-->
+	<div th:replace="common :: carousel" class="container container-fluid"></div>
+
+
+
+	<!--SECTION PAGE 2-->
+	<div th:replace="common :: marketing">
+
 	</div>
 
 
-
-		<div th:replace="common :: carousel">
-
-		</div>
-
-
-
+</div><!-- end main div-->
 
 	</body>
 
